# python_empty_template

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/: main.py
tests/: test_main.py
